Adding authorization , adding reset password functionality , change password functionality'

--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,4 @@ DATABASE_URL = 'mongodb+srv://chaitanyazunzurkar09:Bfr4nwZTlgsou8fx@cluster.xhgr
 MAIL_USER = 
 MAIL_HOST = 
 PASSWORD = 
+SECRET_KEY = 
