--- a/Backend/.env
+++ b/Backend/.env
@@ -3,4 +3,5 @@ DATABASE_URL = 'mongodb+srv://chaitanyazunzurkar09:Bfr4nwZTlgsou8fx@cluster.xhgr
 MAIL_USER = 
 MAIL_HOST = 
 PASSWORD = 
-SECRET_KEY = 
+SECRET_KEY =
+FOLDER_NAME =  
