--- a/Backend/.env
+++ b/Backend/.env
@@ -1,9 +1,12 @@
 PORT = 3000
-DATABASE_URL = 'mongodb+srv://chaitanyazunzurkar09:Bfr4nwZTlgsou8fx@cluster.xhgr6.mongodb.net/EdTechDatabase'
-MAIL_USER = 
-MAIL_HOST = 
-PASSWORD = 
-SECRET_KEY =
-FOLDER_NAME =  
-RAZORPAY_KEY_ID = 
-RAZORPAY_SECRET_ID = 
+DATABASE_URL = mongodb+srv://chaitanyazunzurkar09:Bfr4nwZTlgsou8fx@cluster.xhgr6.mongodb.net/EdTechDatabase
+MAIL_USER = chaitanyazunzurkar@gmail.com
+MAIL_HOST = smtp.gmail.com
+MAIL_PASS = nbulwvtkjzyyspxa
+JWT_SECRET_KEY = ThisIsMyJWTSecretKey
+FOLDER_NAME = StudyNotion
+RAZORPAY_KEY_ID = rzp_test_t4LUM04KXw6wHc
+RAZORPAY_SECRET_ID = DOdtPrjZRxQejIdj1vAzm0MY
+CLOUDINARY_API_KEY = 586715211472662
+CLOUDINARY_API_SECRET = pwx838sWHFbbAOmqFJE2tgKWiko
+CLOUDINARY_NAME = dokbfpbtc
