--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-spinners": "^0.15.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
