--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,8 +13,11 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "lucide-react": "^0.476.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
