--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
