--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
+    "react-super-responsive-table": "^6.0.2",
     "react-type-animation": "^3.2.0",
     "video-react": "^0.16.0"
   },
